# slam_project

./: .gitignore  .gitmodules  Dockerfile  README.md
.devcontainer/: devcontainer.json
src/multi_sensor_slam/: CMakeLists.txt  LICENSE  package.xml
src/multi_sensor_slam/include/multi_sensor_slam/: ORBVocabulary.h  ORBextractor.h  camera_feature_extraction_node.hpp  camera_loop_closure_assistant.hpp  camera_utils.hpp  feature_extraction.hpp  feature_matching.hpp  keyframe_database.h  keyframes.hpp
src/multi_sensor_slam/lib/karto_sdk/: package.xml
src/multi_sensor_slam/lib/karto_sdk/include/karto_sdk/: Karto.h  Mapper.h
src/multi_sensor_slam/scripts/: image_saver.py  orb_test.py
src/multi_sensor_slam/src/: ORBextractor.cpp  camera_feature_extraction_node.cpp  camera_loop_closure_assistant.cpp  camera_utils.cpp  csm_3d_node.cpp  feature_extraction.cpp  feature_matching.cpp  keyframe_database.cpp  keyframes.cpp  loop_closure_test_node.cpp  tf_broadcaster_node.py
src/simulation/create3_sim_with_sensors/irobot_create_common/irobot_create_common_bringup/rviz/: irobot_create_view.rviz
src/simulation/create3_sim_with_sensors/irobot_create_common/irobot_create_control/launch/include/: control.py
src/simulation/create3_sim_with_sensors/irobot_create_common/irobot_create_description/urdf/: _usb_plug.urdf.xacro  common_properties.urdf.xacro  create3.urdf copy.xacro  create3.urdf.xacro  sensor_box.urdf.xacro
src/simulation/create3_sim_with_sensors/irobot_create_common/irobot_create_description/urdf/dock/: standard_dock.urdf.xacro
src/simulation/create3_sim_with_sensors/irobot_create_common/irobot_create_description/urdf/sensors/: _d435.gazebo.xacro  _d435.urdf.xacro  _d435i.urdf.xacro  _d435i_imu_modules.urdf.xacro  camera.xacro  cliff_sensor.urdf.xacro  imu.urdf.xacro  ir_intensity.urdf.xacro  ir_opcode_receivers.urdf.xacro  lidar.urdf.xacro  optical_mouse.urdf.xacro
src/simulation/realsense_gazebo_plugin/: package.xml
